fix(backend): remove organisation dependency from event